# real-time-crypto-prices-prediction

./: .gitignore  .pre-commit-config.yaml
docker-compose/: Makefile  news-signal-live.yml  redpanda.yml  technical-indicators-historical.yml
services/candles/: .gitignore  Dockerfile  Makefile  historical.settings.env  pyproject.toml  settings.env
services/news/: Makefile  README.md  historical.settings.env  pyproject.toml  run.py
services/news-signal/: config.py  golden_dataset.py  historical.settings.env  ollama.env  pyproject.toml  settings.env
services/news-signal/llms/: base.py  claude.py  config.py  ollama.py
services/technical-indicators/: Dockerfile  Makefile  candle.py  historical.settings.env  pyproject.toml  run.py  settings.env  technical_indicators.py
services/to-feature-store/: .gitignore  Dockerfile  Makefile  README.md  historical.settings.env  live.settings.env  live.settings.news-signal.env  pyproject.toml  run.py
services/trades/: .gitignore  Dockerfile  README.md  config.py  historical.settings.env  live.settings.env  pyproject.toml  settings.env
services/trades/kraken_api/: base.py  mock.py  rest.py  trade.py  websocket.py
