[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "quixstreams>=3.13.1",
    "rarfile>=4.2",
    "requests>=2.32.3",
    "wget>=3.2",
]
